c/experimental/stf/include/cccl/c/experimental/stf/stf.h


typedef enum stf_access_mode
{
  STF_NONE  = 0, 
  STF_READ  = 1 << 0, 
  STF_WRITE = 1 << 1, 
  STF_RW    = STF_READ | STF_WRITE 
} stf_access_mode;
typedef struct stf_exec_place_opaque_t* stf_exec_place_handle;
typedef struct stf_data_place_opaque_t* stf_data_place_handle;
typedef struct stf_ctx_handle_t* stf_ctx_handle;
typedef struct stf_pos4
{
  int64_t x; 
  int64_t y; 
  int64_t z; 
  int64_t t; 
} stf_pos4;
typedef struct stf_dim4
{
  uint64_t x; 
  uint64_t y; 
  uint64_t z; 
  uint64_t t; 
} stf_dim4;
typedef void (*stf_get_executor_fn)(stf_pos4* result, stf_pos4 data_coords, stf_dim4 data_dims, stf_dim4 grid_dims);
stf_data_place_handle stf_data_place_composite(stf_exec_place_handle grid, stf_get_executor_fn mapper);
typedef struct stf_logical_data_handle_t* stf_logical_data_handle;
typedef struct stf_task_handle_t* stf_task_handle;
typedef struct stf_cuda_kernel_handle_t* stf_cuda_kernel_handle;
typedef struct stf_host_launch_handle_t* stf_host_launch_handle;
typedef struct stf_host_launch_deps_handle_t* stf_host_launch_deps_handle;
typedef void (*stf_host_callback_fn)(stf_host_launch_deps_handle deps);
stf_task_handle stf_task_create(stf_ctx_handle ctx);
void stf_task_set_exec_place(stf_task_handle t, stf_exec_place_handle exec_p);
void stf_task_set_symbol(stf_task_handle t, const char* symbol);
void stf_task_add_dep(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m);
void stf_task_add_dep_with_dplace(
  stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p);
void stf_task_start(stf_task_handle t);
void stf_task_end(stf_task_handle t);
CUstream stf_task_get_custream(stf_task_handle t);
void* stf_task_get(stf_task_handle t, int submitted_index);
void stf_task_destroy(stf_task_handle t);
void stf_task_enable_capture(stf_task_handle t);
int stf_task_get_grid_dims(stf_task_handle t, stf_dim4* out_dims);
int stf_task_get_custream_at_index(stf_task_handle t, size_t place_index, CUstream* out_stream);
stf_cuda_kernel_handle stf_cuda_kernel_create(stf_ctx_handle ctx);
void stf_cuda_kernel_set_exec_place(stf_cuda_kernel_handle k, stf_exec_place_handle exec_p);
void stf_cuda_kernel_set_symbol(stf_cuda_kernel_handle k, const char* symbol);
void stf_cuda_kernel_add_dep(stf_cuda_kernel_handle k, stf_logical_data_handle ld, stf_access_mode m);
void stf_cuda_kernel_start(stf_cuda_kernel_handle k);
void stf_cuda_kernel_add_desc_cufunc(
  stf_cuda_kernel_handle k,
  CUfunction cufunc,
  dim3 grid_dim_,
  dim3 block_dim_,
  size_t shared_mem_,
  int arg_cnt,
  const void** args);
void stf_cuda_kernel_end(stf_cuda_kernel_handle k);
void stf_cuda_kernel_destroy(stf_cuda_kernel_handle k);
stf_host_launch_handle stf_host_launch_create(stf_ctx_handle ctx);
void stf_host_launch_add_dep(stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m);
void stf_host_launch_set_symbol(stf_host_launch_handle h, const char* symbol);
void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*));
void stf_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback);
void stf_host_launch_destroy(stf_host_launch_handle h);
void* stf_host_launch_deps_get(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_get_size(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_size(stf_host_launch_deps_handle deps);
void* stf_host_launch_deps_get_user_data(stf_host_launch_deps_handle deps);
stf_ctx_handle stf_stackable_ctx_create(void);
void stf_stackable_ctx_finalize(stf_ctx_handle ctx);
cudaStream_t stf_stackable_ctx_fence(stf_ctx_handle ctx);
void stf_stackable_push_graph(stf_ctx_handle ctx);
void stf_stackable_pop(stf_ctx_handle ctx);
typedef struct stf_launchable_graph_handle_t* stf_launchable_graph_handle;
stf_launchable_graph_handle stf_stackable_pop_prologue(stf_ctx_handle ctx);
void stf_stackable_pop_epilogue(stf_ctx_handle ctx);
void stf_launchable_graph_launch(stf_launchable_graph_handle h);
cudaGraphExec_t stf_launchable_graph_exec(stf_launchable_graph_handle h);
cudaStream_t stf_launchable_graph_stream(stf_launchable_graph_handle h);
cudaGraph_t stf_launchable_graph_graph(stf_launchable_graph_handle h);
void stf_launchable_graph_destroy(stf_launchable_graph_handle h);
typedef struct stf_launchable_graph_shared_t* stf_launchable_graph_shared;
int stf_stackable_pop_prologue_shared(stf_ctx_handle ctx, stf_launchable_graph_shared* out);
int stf_launchable_graph_shared_dup(stf_launchable_graph_shared h, stf_launchable_graph_shared* out);
void stf_launchable_graph_shared_free(stf_launchable_graph_shared h);
int stf_launchable_graph_shared_valid(stf_launchable_graph_shared h);
void stf_launchable_graph_shared_launch(stf_launchable_graph_shared h);
cudaGraphExec_t stf_launchable_graph_shared_exec(stf_launchable_graph_shared h);
cudaStream_t stf_launchable_graph_shared_stream(stf_launchable_graph_shared h);
cudaGraph_t stf_launchable_graph_shared_graph(stf_launchable_graph_shared h);
typedef struct stf_while_scope_handle_t* stf_while_scope_handle;
typedef struct stf_repeat_scope_handle_t* stf_repeat_scope_handle;
stf_while_scope_handle stf_stackable_push_while(stf_ctx_handle ctx);
void stf_stackable_pop_while(stf_while_scope_handle scope);
uint64_t stf_while_scope_get_cond_handle(stf_while_scope_handle scope);
stf_repeat_scope_handle stf_stackable_push_repeat(stf_ctx_handle ctx, size_t count);
void stf_stackable_pop_repeat(stf_repeat_scope_handle scope);
typedef enum stf_compare_op
{
  STF_CMP_GT = 0, 
  STF_CMP_LT = 1, 
  STF_CMP_GE = 2, 
  STF_CMP_LE = 3, 
} stf_compare_op;
typedef enum stf_dtype
{
  STF_DTYPE_FLOAT32 = 0,
  STF_DTYPE_FLOAT64 = 1,
  STF_DTYPE_INT32   = 2,
  STF_DTYPE_INT64   = 3,
} stf_dtype;
void stf_stackable_while_cond_scalar(
  stf_ctx_handle ctx,
  stf_while_scope_handle scope,
  stf_logical_data_handle ld,
  stf_compare_op op,
  double threshold,
  stf_dtype dtype);
stf_logical_data_handle
stf_stackable_logical_data_with_place(stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace);
stf_logical_data_handle stf_stackable_logical_data(stf_ctx_handle ctx, void* addr, size_t sz);
stf_logical_data_handle stf_stackable_logical_data_empty(stf_ctx_handle ctx, size_t length);
stf_logical_data_handle stf_stackable_logical_data_no_export_empty(stf_ctx_handle ctx, size_t length);
stf_logical_data_handle stf_stackable_token(stf_ctx_handle ctx);
void stf_stackable_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol);
void stf_stackable_logical_data_set_read_only(stf_logical_data_handle ld);
void stf_stackable_logical_data_push(stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle dplace);
void stf_stackable_logical_data_destroy(stf_logical_data_handle ld);
void stf_stackable_token_destroy(stf_logical_data_handle ld);
stf_task_handle stf_stackable_task_create(stf_ctx_handle ctx);
void stf_stackable_task_add_dep(stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m);
void stf_stackable_task_add_dep_with_dplace(
  stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p);
stf_host_launch_handle stf_stackable_host_launch_create(stf_ctx_handle ctx);
void stf_stackable_host_launch_add_dep(
  stf_ctx_handle ctx, stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m);
void stf_stackable_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback);
void stf_stackable_host_launch_destroy(stf_host_launch_handle h);