python/cuda_stf/cuda/stf/_experimental/_stf_bindings_impl.pyx


    #
    # Tasks
    #
    ctypedef struct stf_task_handle_t
    ctypedef stf_task_handle_t* stf_task_handle
    stf_task_handle stf_task_create(stf_ctx_handle ctx)
    void stf_task_set_exec_place(stf_task_handle t, stf_exec_place_handle exec_p)
    void stf_task_set_symbol(stf_task_handle t, const char* symbol)
    void stf_task_add_dep(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m)
    void stf_task_add_dep_with_dplace(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p)
    void stf_task_start(stf_task_handle t)
    void stf_task_end(stf_task_handle t)
    void stf_task_enable_capture(stf_task_handle t)
    CUstream stf_task_get_custream(stf_task_handle t)
    int stf_task_get_grid_dims(stf_task_handle t, stf_dim4* out_dims)
    int stf_task_get_custream_at_index(stf_task_handle t, size_t place_index, CUstream* out_stream)
    void* stf_task_get(stf_task_handle t, int submitted_index)
    void stf_task_destroy(stf_task_handle t)

    cdef enum stf_access_mode:
        STF_NONE
        STF_READ
        STF_WRITE
        STF_RW

    #
    # CUDA kernel tasks
    #
    ctypedef struct stf_cuda_kernel_handle_t
    ctypedef stf_cuda_kernel_handle_t* stf_cuda_kernel_handle
    stf_cuda_kernel_handle stf_cuda_kernel_create(stf_ctx_handle ctx)
    void stf_cuda_kernel_set_exec_place(stf_cuda_kernel_handle k, stf_exec_place_handle exec_p)
    void stf_cuda_kernel_set_symbol(stf_cuda_kernel_handle k, const char* symbol)
    void stf_cuda_kernel_add_dep(stf_cuda_kernel_handle k, stf_logical_data_handle ld, stf_access_mode m)
    void stf_cuda_kernel_start(stf_cuda_kernel_handle k)
    void* stf_cuda_kernel_get_arg(stf_cuda_kernel_handle k, int index)
    void stf_cuda_kernel_add_desc_cufunc(stf_cuda_kernel_handle k, CUfunction cufunc, dim3 grid_dim_, dim3 block_dim_, size_t shared_mem_, int arg_cnt, const void** args)
    void stf_cuda_kernel_end(stf_cuda_kernel_handle k)
    void stf_cuda_kernel_destroy(stf_cuda_kernel_handle k)

    #
    # Host launch
    #
    ctypedef struct stf_host_launch_handle_t
    ctypedef stf_host_launch_handle_t* stf_host_launch_handle
    ctypedef struct stf_host_launch_deps_handle_t
    ctypedef stf_host_launch_deps_handle_t* stf_host_launch_deps_handle
    ctypedef void (*stf_host_callback_fn)(stf_host_launch_deps_handle deps) noexcept

    stf_host_launch_handle stf_host_launch_create(stf_ctx_handle ctx)
    void stf_host_launch_add_dep(stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m)
    void stf_host_launch_set_symbol(stf_host_launch_handle h, const char* symbol)
    void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*))
    void stf_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback)
    void stf_host_launch_destroy(stf_host_launch_handle h)
    void* stf_host_launch_deps_get(stf_host_launch_deps_handle deps, size_t index)
    size_t stf_host_launch_deps_get_size(stf_host_launch_deps_handle deps, size_t index)
    size_t stf_host_launch_deps_size(stf_host_launch_deps_handle deps)
    void* stf_host_launch_deps_get_user_data(stf_host_launch_deps_handle deps)

    #
    # Stackable contexts (PR #8165 features ported on top of the opaque-handle
    # C API). All stackable_* entry points reuse existing handle types where
    # appropriate (stf_ctx_handle, stf_logical_data_handle, stf_task_handle,
    # stf_host_launch_handle); only while/repeat scopes have their own opaque
    # handles.
    #
    stf_ctx_handle stf_stackable_ctx_create()
    void stf_stackable_ctx_finalize(stf_ctx_handle ctx) nogil
    CUstream stf_stackable_ctx_fence(stf_ctx_handle ctx) nogil
    void stf_stackable_push_graph(stf_ctx_handle ctx)
    void stf_stackable_pop(stf_ctx_handle ctx)

    ctypedef struct stf_while_scope_handle_t
    ctypedef stf_while_scope_handle_t* stf_while_scope_handle
    ctypedef struct stf_repeat_scope_handle_t
    ctypedef stf_repeat_scope_handle_t* stf_repeat_scope_handle

    stf_while_scope_handle stf_stackable_push_while(stf_ctx_handle ctx)
    void stf_stackable_pop_while(stf_while_scope_handle scope)
    uint64_t stf_while_scope_get_cond_handle(stf_while_scope_handle scope)
    stf_repeat_scope_handle stf_stackable_push_repeat(stf_ctx_handle ctx, size_t count)
    void stf_stackable_pop_repeat(stf_repeat_scope_handle scope)

    ctypedef struct stf_launchable_graph_handle_t
    ctypedef stf_launchable_graph_handle_t* stf_launchable_graph_handle

    stf_launchable_graph_handle stf_stackable_pop_prologue(stf_ctx_handle ctx)
    void stf_stackable_pop_epilogue(stf_ctx_handle ctx)
    void stf_launchable_graph_launch(stf_launchable_graph_handle h) nogil
    cudaGraphExec_t stf_launchable_graph_exec(stf_launchable_graph_handle h)
    cudaStream_t stf_launchable_graph_stream(stf_launchable_graph_handle h)
    cudaGraph_t stf_launchable_graph_graph(stf_launchable_graph_handle h)
    void stf_launchable_graph_destroy(stf_launchable_graph_handle h)

    ctypedef struct stf_launchable_graph_shared_t
    ctypedef stf_launchable_graph_shared_t* stf_launchable_graph_shared

    int stf_stackable_pop_prologue_shared(stf_ctx_handle ctx, stf_launchable_graph_shared* out)
    int stf_launchable_graph_shared_dup(stf_launchable_graph_shared h, stf_launchable_graph_shared* out)
    void stf_launchable_graph_shared_free(stf_launchable_graph_shared h) nogil
    int stf_launchable_graph_shared_valid(stf_launchable_graph_shared h)
    void stf_launchable_graph_shared_launch(stf_launchable_graph_shared h) nogil
    cudaGraphExec_t stf_launchable_graph_shared_exec(stf_launchable_graph_shared h)
    cudaStream_t stf_launchable_graph_shared_stream(stf_launchable_graph_shared h)
    cudaGraph_t stf_launchable_graph_shared_graph(stf_launchable_graph_shared h)

    cdef enum stf_compare_op:
        STF_CMP_GT
        STF_CMP_LT
        STF_CMP_GE
        STF_CMP_LE

    cdef enum stf_dtype:
        STF_DTYPE_FLOAT32
        STF_DTYPE_FLOAT64
        STF_DTYPE_INT32
        STF_DTYPE_INT64

    void stf_stackable_while_cond_scalar(
        stf_ctx_handle ctx,
        stf_while_scope_handle scope,
        stf_logical_data_handle ld,
        stf_compare_op op,
        double threshold,
        stf_dtype dtype)

    stf_logical_data_handle stf_stackable_logical_data_with_place(
        stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace)
    stf_logical_data_handle stf_stackable_logical_data(stf_ctx_handle ctx, void* addr, size_t sz)
    stf_logical_data_handle stf_stackable_logical_data_empty(stf_ctx_handle ctx, size_t length)
    stf_logical_data_handle stf_stackable_logical_data_no_export_empty(stf_ctx_handle ctx, size_t length)
    stf_logical_data_handle stf_stackable_token(stf_ctx_handle ctx)
    void stf_stackable_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol)
    void stf_stackable_logical_data_set_read_only(stf_logical_data_handle ld)
    void stf_stackable_logical_data_push(
        stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle dplace)
    void stf_stackable_logical_data_destroy(stf_logical_data_handle ld)
    void stf_stackable_token_destroy(stf_logical_data_handle ld)

    stf_task_handle stf_stackable_task_create(stf_ctx_handle ctx)
    void stf_stackable_task_add_dep(
        stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m)
    void stf_stackable_task_add_dep_with_dplace(
        stf_ctx_handle ctx, stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p)

    stf_host_launch_handle stf_stackable_host_launch_create(stf_ctx_handle ctx)
    void stf_stackable_host_launch_add_dep(
        stf_ctx_handle ctx, stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m)
    void stf_stackable_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback)
    void stf_stackable_host_launch_destroy(stf_host_launch_handle h)

# ctypes mirror structs for the partition mapper callback.
# The C API uses an out-pointer signature for stf_get_executor_fn:
#   void (*)(stf_pos4* result, stf_pos4 data_coords, stf_dim4 data_dims, stf_dim4 grid_dims)
# This is directly representable as a ctypes CFUNCTYPE.
class _mapper_pos4(ctypes.Structure):
    _fields_ = [("x", ctypes.c_int64), ("y", ctypes.c_int64),
                ("z", ctypes.c_int64), ("t", ctypes.c_int64)]

class _mapper_dim4(ctypes.Structure):
    _fields_ = [("x", ctypes.c_uint64), ("y", ctypes.c_uint64),
                ("z", ctypes.c_uint64), ("t", ctypes.c_uint64)]

_mapper_cfunc_type = ctypes.CFUNCTYPE(
    None, ctypes.POINTER(_mapper_pos4), _mapper_pos4, _mapper_dim4, _mapper_dim4)


class _MapperCallbackState:
    """Owned state for a composite-place partition mapper.

    A ctypes host callback cannot propagate a Python exception back through the
    C call boundary: if the mapper raises or returns a malformed result, STF
    would otherwise consume whatever happens to be in the out-pointer. We always
    write a safe in-range fallback and stash the first failure here so the
    Python side can re-check it right after the synchronous submission that
    drove the mapping and re-raise instead of silently misplacing data.
    """

    __slots__ = ("mapper", "error", "callback", "c_ptr")

    def __init__(self, mapper):
        self.mapper = mapper
        self.error = None      # first BaseException raised inside the callback
        self.callback = None   # ctypes callback object (kept alive here)
        self.c_ptr = 0

    def raise_if_error(self):
        """Re-raise (once) the first failure captured inside the callback."""
        exc = self.error
        if exc is not None:
            self.error = None
            raise exc


def _make_mapper_callback(mapper, data_rank, grid_rank):
    """Wrap a Python partitioner as a C function pointer for stf_data_place_composite.

    The Python mapper sees the public C-order contract: it receives
    ``(data_coords, data_dims, grid_dims)`` as C-order tuples of ``data_rank``
    (respectively ``grid_rank``) entries, and returns the owning place's grid
    coordinates as a C-order tuple of ``grid_rank`` entries (or a plain int
    for a 1-D grid). The trampoline converts to and from the native
    dimension-0-fastest representation.

    Returns an owned :class:`_MapperCallbackState`. The caller must keep it alive
    for the lifetime of the composite data place (it retains the ctypes callback)
    and should call :meth:`_MapperCallbackState.raise_if_error` after the
    synchronous submission that triggered mapping.
    """
    if not 1 <= data_rank <= 4:
        raise ValueError(f"data_rank must be between 1 and 4, got {data_rank}")
    if not 1 <= grid_rank <= 4:
        raise ValueError(f"grid_rank must be between 1 and 4, got {grid_rank}")
    state = _MapperCallbackState(mapper)
